--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -320,7 +320,7 @@ li {
 		display: none;
 
 		@media only screen and (width>=500px) and (height>=500px) {
-			width: fit-content;
+			width: max-content;
 			height: 56px;
 			min-height: 56px;
 			display: flex;
@@ -332,7 +332,18 @@ li {
 		}
 
 		@media screen and (width>=1265px) {
-			justify-content: start;
+			//justify-content: start;
+		}
+
+		&_hover-wrapper {
+			@include bg;
+			@include hover-bg(50%);
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 100%;
+			aspect-ratio: 1/1;
+			//box-sizing: border-box;
 		}
 	}
 
@@ -353,8 +364,8 @@ li {
 		}
 
 		@media screen and (width>=1265px) {
-			justify-content: start;
-			padding-left: 11px;
+			justify-content: center;
+			//padding-left: 11px;
 		}
 	}
 
@@ -466,11 +477,9 @@ li {
 	}
 
 	&_hover-wrapper {
-		@include bg;
 		@include hover-bg(9999px);
 		display: flex;
 		width: max-content;
-		//min-height: 100%;
 		height: 100%;
 		max-height: 100%;
 		align-items: center;
