--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -1,9 +1,22 @@
-@mixin hover-bg($border-radius) {
+@mixin hover-bg($border-radius, $no-bg: false, $blue-bg: false) {
 	@media screen and (width>=1265px) {
 		&:hover {
-			background-color: lightgrey;
-			border-radius: $border-radius;
+			@if $no-bg {
+				background-color: $theme-color;
+			} @else if $blue-bg {
+				background-color: lightblue;
+				border-radius: $border-radius;
+			} @else {
+				background-color: lightgrey;
+				border-radius: $border-radius;
+			}
 		}
+	}
+}
+
+@mixin hover-btn-bg {
+	&:hover {
+		background-color: rgba(23, 124, 192);
 	}
 }
 
@@ -14,9 +27,8 @@
 	}
 }
 
-@mixin bg {
-	background-color: yellow;
-}
+$theme-color: white;
+$sub-theme-color: rgba(239, 243, 244, 0.5);
 
 @font-face {
 	font-family: "chirp";
@@ -182,7 +194,7 @@ li {
 	overflow-x: hidden;
 	font-family: chirp;
 	font-weight: light;
-	background-color: #ffffff;
+	background-color: $theme-color;
 
 	@media only screen and (width>=500px) and (height>=500px) {
 		flex-direction: row;
@@ -205,7 +217,6 @@ li {
 	max-height: 53.5px; //both heights required + purposefully diff from twitter actual height in order to avoid creating wrapper inside nav
 	width: 100%;
 	box-sizing: border-box;
-	background-color: white;
 
 	@media only screen and (width>=500px) and (height>=500px) {
 		flex-direction: column;
@@ -512,16 +523,6 @@ li {
 		}
 	}
 
-	/* .ts {
-		@extend .nav_a;
-		border-radius: 99px;
-		width: min-content;
-	}
-
-	.ts:hover {
-		background-color: red;
-	} */
-
 	&_nav-icons {
 		width: 26.25px;
 		height: 26.25px;
@@ -634,6 +635,7 @@ li {
 	}
 
 	&_button-wrapper {
+		@include hover-btn-bg();
 		width: 100%;
 		height: 100%;
 		display: flex;
@@ -703,8 +705,6 @@ li {
 		//z-index: 0;
 		//margin: 12px 0;
 		//z-index: 2;
-		//background-color: white;
-
 		//margin-top: auto;
 	}
 
@@ -796,9 +796,9 @@ li {
 	}
 }
 
-#profile-pill:hover {
+/* #profile-pill:hover {
 	background-color: rgba(220, 220, 220, 255);
-}
+} */
 
 button:hover {
 	background-color: #1d8ad3;
@@ -1111,9 +1111,9 @@ button:hover {
 		}
 	}
 
-	a:active {
+	/* 	a:active {
 		background-color: lightgray;
-	}
+	} */
 }
 
 .tweet-area {
@@ -1194,6 +1194,7 @@ button:hover {
 	}
 
 	&_li {
+		@include hover-bg(50%, false, true);
 		display: flex;
 		height: 100%;
 		width: 36px;
@@ -1208,6 +1209,11 @@ button:hover {
 		margin-left: -8px;
 		font-family: chirp;
 		font-weight: bold;
+	}
+
+	&_li--light-icon {
+		@extend .tweet-area_li;
+		@include hover-bg(0, true);
 	}
 
 	&_anchors {
@@ -1238,6 +1244,7 @@ button:hover {
 		margin-right: 2px;
 	}
 	&_pill-btn {
+		@include hover-btn-bg();
 		display: flex;
 		justify-content: center;
 		align-items: center;
@@ -1519,7 +1526,7 @@ button:hover {
 	display: none;
 
 	@media screen and (width>=988px) {
-		background-color: white;
+		background-color: $theme-color;
 		position: sticky;
 		top: 0px !important;
 		z-index: 1;
@@ -1543,14 +1550,12 @@ button:hover {
 			width: 100%;
 			height: 44px;
 			border-radius: 99px;
-			//background-color: rgba(239, 243, 244, 255);
 			margin-top: 4.5px;
-			//margin-bottom: 10px;
 			box-sizing: border-box;
 			display: flex;
 			align-items: center;
 			border: solid 1px white;
-			background-color: rgb(247, 249, 249);
+			background-color: $sub-theme-color;
 		}
 	}
 	&_searchIcon-wrapper {
@@ -1606,7 +1611,7 @@ button:hover {
 		z-index: 1;
 		box-sizing: border-box;
 		padding: 20px 12px 12px 12px;
-		background-color: #ffffff;
+		background-color: $theme-color;
 		border-radius: 8px;
 		box-shadow: rgba(101, 119, 134, 0.2) 0px 0px 15px;
 		box-shadow: rgba(101, 119, 134, 0.15) 0px 0px 3px 1px;
@@ -1649,8 +1654,8 @@ button:hover {
 		flex-direction: column;
 		width: 290px;
 		min-height: 126px;
-		background-color: rgb(247, 249, 249);
-		border: 1px solid rgb(247, 249, 249);
+		background-color: $sub-theme-color;
+		border: 1px solid $sub-theme-color;
 		margin-bottom: 16px;
 		border-radius: 17px;
 		box-sizing: border-box;
@@ -1725,11 +1730,11 @@ button:hover {
 		flex-direction: column;
 		width: 290px;
 		min-height: min-content;
-		background-color: rgb(247, 249, 249);
+		background-color: $sub-theme-color;
 		margin-bottom: 16px;
 		border-radius: 17px;
 		box-sizing: border-box;
-		border: solid 1px rgb(247, 249, 249);
+		border: solid 1px $sub-theme-color;
 	}
 
 	@media screen and (width>=1078px) {
@@ -1888,10 +1893,10 @@ button:hover {
 	@media screen and (width>=988px) {
 		display: flex;
 		flex-direction: column;
-		background-color: rgb(247, 249, 249);
+		background-color: $sub-theme-color;
 		border-radius: 16px;
 		margin-bottom: 16px;
-		border: 1px solid rgb(247, 249, 249);
+		border: 1px solid $sub-theme-color;
 		box-sizing: border-box;
 		height: 233.109px;
 	}
