--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -27,8 +27,6 @@
 	}
 }
 
-
-
 $theme-color: white;
 $sub-theme-color: rgba(239, 243, 244, 0.5);
 
@@ -765,11 +763,13 @@ li {
 			box-sizing: border-box;
 			justify-content: space-around;
 		}
-		b{
+		b {
 			overflow-x: hidden;
 			text-overflow: ellipsis;
 		}
 		div {
+			overflow-x: hidden;
+			text-overflow: ellipsis;
 			font-weight: 400;
 			color: rgb(83, 100, 113);
 		}
@@ -1551,28 +1551,29 @@ button:hover {
 		max-width: 350px;
 		width: 350px;
 	}
-	&_wrapper{
+	&_wrapper {
 		@media screen and (width>=988px) {
-		box-sizing: border-box;
-		width: 100%;
-		height: 42px;
-		border: 1px solid rgb(239, 243, 244);
-		border-radius: 99px;
-		margin-top: 3.5px;
+			box-sizing: border-box;
+			width: 100%;
+			height: 44px;
+			border: 1px solid rgb(239, 243, 244);
+			border-radius: 99px;
+			margin-top: 4.5px;
+			background-color: rgb(239, 243, 244);
 		}
 	}
 
 	&_container {
 		@media screen and (width>=988px) {
 			width: 100%;
-			height: 44px;
+			height: 100%;
 			border-radius: 99px;
 
 			box-sizing: border-box;
 			display: flex;
 			align-items: center;
 			//border: solid 1px white;
-			background-color: rgb(239, 243, 244);
+
 		}
 	}
 	&_searchIcon-wrapper {
@@ -1600,7 +1601,7 @@ button:hover {
 
 	&_input {
 		@extend .searchBar_container;
-		border:none;
+		border: none;
 		background-color: transparent;
 		margin: 0;
 		outline: none;
@@ -1644,20 +1645,24 @@ button:hover {
 		font-weight: 400;
 		line-height: 20px;
 		text-align: center;
-		justify-content: start;
+		justify-content: center;
 		//margin-left: 17px;
 		color: rgb(83, 100, 113);
 		word-wrap: wrap;
 		overflow-wrap: break-word;
-		text-indent: -3px;
+		//text-indent: -2px;
 	}
 }
 
 .searchBar--focused {
 	@extend .searchBar;
-	.searchBar_container {
+
+	.searchBar_wrapper {
 		border: solid 1px rgb(0, 143, 253);
+		background-color: rgb(255,255,255)
 	}
+
+
 
 	.searchBar_input {
 		border: none;
@@ -1745,13 +1750,13 @@ button:hover {
 	}
 }
 
-.subscribeToPremium{
+.subscribeToPremium {
 	@extend .getVerified;
 	min-height: 166px;
 
 	@media screen and (width>=1078px) {
-			min-height: 146px;
-			max-height: 146px;
+		min-height: 146px;
+		max-height: 146px;
 	}
 	&_container {
 		display: flex;
@@ -1765,7 +1770,7 @@ button:hover {
 		@media screen and (width>=1078px) {
 			min-height: 144px;
 			max-height: 144px;
-	}
+		}
 	}
 
 	&_header {
@@ -2140,7 +2145,7 @@ button:hover {
 		margin: 0 16px;
 		box-sizing: border-box;
 		flex-wrap: wrap;
-		row-gap:5px;
+		row-gap: 5px;
 		&_elements {
 			display: flex;
 			align-items: center;
