--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -14,9 +14,13 @@
 	}
 }
 
-@mixin hover-btn-bg {
+@mixin hover-btn-bg($enabled: true) {
 	&:hover {
-		background-color: rgba(23, 124, 192);
+		@if $enabled {
+			background-color: rgba(23, 124, 192);
+		} @else {
+			background-color: rgb(0, 0, 0);
+		}
 	}
 }
 
@@ -1145,6 +1149,13 @@ button:hover {
 		width: 40px;
 		margin: 0 12px 0 0;
 		padding-top: 12px;
+
+		a {
+			width: fit-content;
+			min-height: 40px;
+			margin: 0;
+			padding: 0;
+		}
 	}
 
 	&_profile-img {
@@ -1251,7 +1262,7 @@ button:hover {
 		margin-right: 2px;
 	}
 	&_pill-btn {
-		@include hover-btn-bg();
+		//@include hover-btn-bg();
 		display: flex;
 		justify-content: center;
 		align-items: center;
@@ -1272,6 +1283,17 @@ button:hover {
 		display: inline-block;
 		color: rgb(255, 255, 255);
 	}
+}
+
+.tweet-area--shrunk {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	height: 120px;
+	margin: 0 0 0 0;
+	padding: 4px 16px 0 16px;
+	box-sizing: border-box;
+	border-bottom: var(--main-border-style);
 }
 
 .timeline_wrapper {
@@ -1298,6 +1320,7 @@ button:hover {
 		margin-top: 12px;
 		padding: 0px 17px 12px;
 		border-bottom: var(--main-border-style);
+		text-decoration: none;
 
 		@media screen and (width>=500px) {
 			padding: 0px 16px 12px;
@@ -1308,6 +1331,7 @@ button:hover {
 		width: 40px;
 		margin-right: 12px;
 		flex: 0 0 auto;
+		text-decoration: underline;
 		img {
 			height: 40px;
 			border-radius: 3px;
@@ -1573,7 +1597,6 @@ button:hover {
 			display: flex;
 			align-items: center;
 			//border: solid 1px white;
-
 		}
 	}
 	&_searchIcon-wrapper {
@@ -1659,10 +1682,8 @@ button:hover {
 
 	.searchBar_wrapper {
 		border: solid 1px rgb(0, 143, 253);
-		background-color: rgb(255,255,255)
+		background-color: rgb(255, 255, 255);
 	}
-
-
 
 	.searchBar_input {
 		border: none;
@@ -1798,6 +1819,7 @@ button:hover {
 
 	&_button_wrapper {
 		@extend .nav_tweet-button_container_button-wrapper;
+		@include hover-btn-bg(false);
 		color: rgb(255, 255, 255);
 		text-decoration: none;
 		background-color: black;
@@ -1874,6 +1896,8 @@ button:hover {
 		height: 82px;
 		padding: 12px 16px;
 		box-sizing: border-box;
+		text-decoration: none;
+		color: unset;
 	}
 
 	&_cards-with-image {
@@ -1926,8 +1950,6 @@ button:hover {
 		color: rgb(83, 100, 113);
 	}
 
-
-
 	/* &_categories_text {
 		max-height: 15.5px;
 		line-height: 16px;
@@ -1944,8 +1966,6 @@ button:hover {
 		margin-top: 1.5px;
 		fill: rgb(83, 100, 113);
 	}
-
-
 
 	&_images {
 		width: 68px;
@@ -1984,6 +2004,7 @@ button:hover {
 		height: 52px;
 		box-sizing: border-box;
 		padding: 16px;
+		text-decoration: none;
 		a {
 			color: rgb(29, 155, 240);
 			text-decoration: none;
@@ -2033,6 +2054,7 @@ button:hover {
 		height: 65.5546875px;
 		padding: 12px 16px;
 		box-sizing: border-box;
+		text-decoration: none;
 
 		&_wrapper {
 			display: flex;
@@ -2072,6 +2094,9 @@ button:hover {
 				text-overflow: ellipsis;
 				overflow-x: hidden;
 			}
+			b:hover {
+				text-decoration: underline;
+			}
 			div {
 				padding-top: 2px;
 				color: #536471;
@@ -2105,6 +2130,7 @@ button:hover {
 
 	&_button_wrapper {
 		@extend .nav_tweet-button_container_button-wrapper;
+		@include hover-btn-bg(false);
 		border-radius: 99px;
 		height: 32px;
 		width: 78px;
@@ -2132,6 +2158,7 @@ button:hover {
 		height: 52px;
 		box-sizing: border-box;
 		padding: 16px;
+		text-decoration: none;
 		a {
 			color: rgb(29, 155, 240);
 			text-decoration: none;
@@ -2156,6 +2183,12 @@ button:hover {
 		&_elements {
 			display: flex;
 			align-items: center;
+			text-decoration: none;
+		}
+
+		&_elements:hover {
+			text-decoration: underline;
+			color: rgb(83, 100, 113);
 		}
 
 		&_text {
