timeline hover tweaks

--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -1307,7 +1307,9 @@ button:hover {
 	box-sizing: border-box;
 	padding: 0;
 	margin-top: -0.5px;
-
+	:hover {
+		background-color: rgb(239, 243, 244);
+	}
 	@media screen and (width>=500px) {
 		margin-top: 0;
 	}
@@ -1317,14 +1319,14 @@ button:hover {
 		height: min-content;
 		width: 100%;
 		box-sizing: border-box;
-		margin-top: 12px;
-		padding: 0px 17px 12px;
+		//margin-top: 12px;
+		padding:12px 17px;
 		border-bottom: var(--main-border-style);
 		text-decoration: none;
-
+/*
 		@media screen and (width>=500px) {
-			padding: 0px 16px 12px;
-		}
+			padding: 12px 17px;
+		} */
 	}
 
 	&_profile-picture-wrapper {
@@ -1371,7 +1373,12 @@ button:hover {
 			overflow-y: hidden;
 			white-space: nowrap;
 			text-overflow: ellipsis;
+			text-decoration: none;
 		}
+		&_user-name:hover {
+			text-decoration: underline;
+		}
+
 		&_checkmark-wrapper {
 			margin-left: 2px;
 		}
@@ -1398,6 +1405,7 @@ button:hover {
 			min-width: 18.75px;
 			aspect-ratio: 1/1;
 			margin-left: auto;
+			fill: rgb(83, 100, 113);
 		}
 	}
 
@@ -1406,6 +1414,7 @@ button:hover {
 		max-width: 100%;
 		word-wrap: break-word;
 		line-height: 18px;
+		color: rgba(0, 0, 0, 1);
 	}
 	&_media-wrapper {
 		width: 100%;
