--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -1367,10 +1367,10 @@ button:hover {
 		padding: 12px 17px;
 		border-bottom: var(--main-border-style);
 		text-decoration: none;
-		/*
+
 		@media screen and (width>=500px) {
-			padding: 12px 17px;
-		} */
+			padding: 12px 16px;
+		}
 	}
 
 	&_profile-picture-wrapper {
