--- a/Main_Folder/NODEJS/NODE_FCC_PROJECTS/boilerplate-project-exercisetracker/views/index.html
+++ b/Main_Folder/NODEJS/NODE_FCC_PROJECTS/boilerplate-project-exercisetracker/views/index.html
@@ -13,7 +13,7 @@
 			type="text/css"
 		/>
 		<link
-			href="../public/styles.css"
+			href="../public/style.css"
 			rel="stylesheet"
 			type="text/css"
 		/>
