--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -1471,7 +1471,6 @@ button:hover {
 		width: 100%;
 		height: 357.5px;
 		border-radius: 5%;
-		//margin-top: 14px;
 	}
 	&_statistics-row {
 		display: flex;
@@ -1490,24 +1489,28 @@ button:hover {
 			align-items: start;
 			justify-content: start;
 			width: min-content;
+			fill: rgb(83, 100, 113);
+			color: rgb(83, 100, 113);
 		}
 
 		&_icons {
 			display: flex;
 			width: 18.75px;
 			aspect-ratio: 1/1;
-			fill: rgb(83, 100, 113);
+			fill: inherit;
 		}
+
 		&_values {
 			font-size: 13px;
 			height: 20px;
 			line-height: 16px;
-			color: rgb(83, 100, 113);
 			display: flex;
 			align-items: center;
 			justify-content: start;
 			box-sizing: border-box;
 			padding: 0px 4px;
+			color: inherit;
+			fill: inherit;
 
 			@media screen and (width>=500px) {
 				padding: 0px 12px;
@@ -1540,7 +1543,6 @@ button:hover {
 		flex: 1 0 auto;
 		flex-direction: column;
 		overflow-x: hidden;
-		//overflow-y: scroll;
 		scrollbar-width: none;
 	}
 
@@ -1695,7 +1697,6 @@ button:hover {
 		line-height: normal;
 		font-stretch: 100%;
 		font-weight: 400;
-		//color: rgb(15, 20, 25);
 	}
 
 	&_prompt-wrapper {
@@ -1968,17 +1969,17 @@ button:hover {
 		align-items: stretch;
 
 		&_categories {
-		font-size: 13px;
-		height: 16px;
-		padding: 0;
-		box-sizing: border-box;
-		padding-top: 2px;
-		margin-bottom: 4px;
-		display: flex;
-		align-items: start;
-		justify-content: space-between;
-		color: rgb(83, 100, 113);
-	}
+			font-size: 13px;
+			height: 16px;
+			padding: 0;
+			box-sizing: border-box;
+			padding-top: 2px;
+			margin-bottom: 4px;
+			display: flex;
+			align-items: start;
+			justify-content: space-between;
+			color: rgb(83, 100, 113);
+		}
 	}
 
 	/* &_cards-with-image_categories {
