--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -1459,17 +1459,24 @@ button:hover {
 		word-wrap: break-word;
 		line-height: 18px;
 		color: rgba(0, 0, 0, 1);
+		pre{
+			margin: inherit;
+			font: inherit;
+			max-width: inherit;
+			word-wrap: inherit;
+			white-space: pre-wrap;
+		}
 	}
 	&_media-wrapper {
 		width: 100%;
-		height: 357.5px;
+		//height: 357.5px;
 		margin-top: 14px;
 		box-sizing: border-box;
 		border: 1px solid white;
 	}
 	&_media {
 		width: 100%;
-		height: 357.5px;
+		//height: 357.5px;
 		border-radius: 5%;
 	}
 	&_statistics-row {
