added conditional tweet author checkmark and matching color code

--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -1458,6 +1458,14 @@ button:hover {
 			aspect-ratio: 1/1;
 			fill: rgb(29, 155, 240);
 		}
+		&_checkmark--gold {
+			@extend .timeline_body_header_checkmark;
+			fill: rgb(209, 136, 0);
+		}
+		&_checkmark--grey {
+			@extend .timeline_body_header_checkmark;
+			fill: rgb(130, 154, 171);
+		}
 		&_handle {
 			margin-left: 4px;
 			margin-right: 4px;
